--- a/EcoCareApp/EcoCareApp/Views/Home.xaml
+++ b/EcoCareApp/EcoCareApp/Views/Home.xaml
@@ -5,15 +5,14 @@
              xmlns:xtools="http://xamarin.com/schemas/2020/toolkit"
              xmlns:local="clr-namespace:EcoCareApp.Views"
              xmlns:guage ="clr-namespace:Syncfusion.SfGauge.XForms;assembly=Syncfusion.SfGauge.XForms"
-
              >
     <xtools:TabView x:Name="mainTabs" TabStripPlacement="Bottom" IsSwipeEnabled="False" TabStripHeight="50">
         <xtools:TabViewItem Icon="images/user_bw.png" IconSelected="images/user.png">
-            <!--<local:UserProfile>
+            <local:UserProfile>
                 <a href="https://www.flaticon.com/free-icons/user" title="user icons">User icons created by Kiranshastry - Flaticon</a>
                 <a href="https://www.flaticon.com/free-icons/shopping-cart" title="shopping-cart icons">Shopping-cart icons created by Roundicons Premium - Flaticon</a>
                 
-            </local:UserProfile>-->
+            </local:UserProfile>
         </xtools:TabViewItem>
 
 
@@ -23,7 +22,8 @@
                     <Label Text="Home!"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
-                    <guage:SfCircularGauge>
+ 
+                   <!-- <guage:SfCircularGauge>
                         <guage:SfCircularGauge.Scales>
                             <guage:Scale StartValue="0" EndValue="100">
                                 <guage:Scale.Ranges>
@@ -39,7 +39,7 @@
                                 
                             </guage:<Unknown>>
                         </guage:SfCircularGauge.Headers>
-                    </guage:SfCircularGauge>
+                    </guage:SfCircularGauge> -->
                 </StackLayout>
             </xtools:TabViewItem.Content>
         </xtools:TabViewItem>
