--- a/EcoCareApp/EcoCareApp/App.xaml
+++ b/EcoCareApp/EcoCareApp/App.xaml
@@ -10,6 +10,95 @@
         <ResourceDictionary>
 
 
+            <Color x:Key="EntryPlaceholderColor">#A0FFFFFF</Color>
+            <Color x:Key="GradientStartColor">#012E8B</Color>
+            <Color x:Key="GradientEndColor">#3F0041</Color>
+            <Color x:Key="GradientStart">#713d74</Color>
+            <Color x:Key="GradientEnd">#221e60</Color>
+            <Color x:Key="TwitterBlue">#55acee</Color>
+            <Color x:Key="Red">#dc4e41</Color>
+            <Color x:Key="FacebookBlue">#4267B2</Color>
+            <Color x:Key="LightGreen">#35c659</Color>
+            <Color x:Key="FacebookLogin">#3b5998</Color>
+            <Color x:Key="Transparent">Transparent</Color>
+            <Color x:Key="Link">#567cd7</Color>
+            <Color x:Key="Steel">#788396</Color>
+            <Color x:Key="Gold">#fcbc0f</Color>
+            <Color x:Key="Dull-Red">#c04848</Color>
+            <Color x:Key="Deep-Purple">#480048</Color>
+            <Color x:Key="Green">#7ed321</Color>
+            <Color x:Key="Liliac">#d483fc</Color>
+            <Color x:Key="Purpleish-Blue">#5d4cf7</Color>
+            <Color x:Key="Bright-Cyan">#3cdeff</Color>
+            <Color x:Key="Lemon-Lime">#bdff27</Color>
+            <Color x:Key="VioletGradientStart">#373668</Color>
+            <Color x:Key="VioletGradientEnd">#24243b</Color>
+            <Color x:Key="PinkGradientStart">#d54381</Color>
+            <Color x:Key="PinkGradientEnd">#7644ad</Color>
+            <Style x:Key="TitleLabelStyle" TargetType="Label">
+                <Setter Property="FontSize" Value="16" />
+                <Setter Property="TextColor" Value="{DynamicResource Gray-900}" />
+                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
+                <Setter Property="FontFamily" Value="Montserrat-SemiBold" />
+                <Setter Property="LineHeight" Value="{OnPlatform Android=1.5, Default=-1}" />
+            </Style>
+
+            <!--  Common style for Description labels  -->
+            <Style x:Key="DescriptionLabelStyle" TargetType="Label">
+                <Setter Property="FontSize" Value="14" />
+                <Setter Property="TextColor" Value="{DynamicResource Gray-700}" />
+                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
+                <Setter Property="FontFamily" Value="Montserrat-Medium" />
+                <Setter Property="LineHeight" Value="{OnPlatform Android=1.5, Default=-1}" />
+            </Style>
+
+            <!--  Common style for Icon labels  -->
+            <Style x:Key="IconLabelStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="{DynamicResource Gray-600}" />
+                <Setter Property="FontSize" Value="18" />
+                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="VerticalOptions" Value="Center" />
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
+                <Setter Property="FontFamily" Value="FontIcons" />
+            </Style>
+
+            <!--  Common style for Simple labels  -->
+            <Style x:Key="SimpleLabelStyle" TargetType="Label">
+                <Setter Property="FontSize" Value="12" />
+                <Setter Property="TextColor" Value="{DynamicResource Gray-700}" />
+                <Setter Property="HorizontalOptions" Value="Start" />
+                <Setter Property="HorizontalTextAlignment" Value="Start" />
+                <Setter Property="VerticalOptions" Value="Center" />
+                <Setter Property="VerticalTextAlignment" Value="Center" />
+                <Setter Property="FontFamily" Value="Montserrat-Medium" />
+                <Setter Property="LineHeight" Value="{OnPlatform Android=1.5, Default=-1}" />
+            </Style>
+
+            <!--  Common style for Error Icon labels  -->
+            <Style x:Key="ErrorIconLabelStyle" TargetType="Label">
+                <Setter Property="Margin" Value="15,0" />
+                <Setter Property="FontFamily" Value="FontIcons" />
+                <Setter Property="FontSize" Value="18" />
+                <Setter Property="HorizontalOptions" Value="EndAndExpand" />
+                <Setter Property="HorizontalTextAlignment" Value="End" />
+                <Setter Property="TextColor" Value="{DynamicResource Red}" />
+                <Setter Property="VerticalOptions" Value="Center" />
+            </Style>
+            <Style x:Key="HorizontalSeparatorStyle" TargetType="BoxView">
+                <Setter Property="Color" Value="{DynamicResource Gray-200}" />
+                <Setter Property="VerticalOptions" Value="Center" />
+                <Setter Property="HeightRequest" Value="1" />
+                <Setter Property="BackgroundColor" Value="{DynamicResource Gray-200}" />
+            </Style>
+
+            <Style x:Key="VerticalSeparatorStyle" TargetType="BoxView">
+                <Setter Property="WidthRequest" Value="1" />
+                <Setter Property="HeightRequest" Value="12" />
+                <Setter Property="BackgroundColor" Value="{DynamicResource Gray-700}" />
+                <Setter Property="VerticalOptions" Value="Center" />
+            </Style>
             <Style x:Key="title" TargetType="Label">
                 <Setter Property="FontFamily" Value="Amatic"></Setter>
                 <Setter Property="FontSize" Value="27"></Setter>
