--- a/EcoCareApp/EcoCareApp/App.xaml
+++ b/EcoCareApp/EcoCareApp/App.xaml
@@ -44,6 +44,15 @@
                 <Setter Property="LineHeight" Value="{OnPlatform Android=1.5, Default=-1}" />
             </Style>
 
+            <Style x:Key="TitleEntrylStyle" TargetType="Entry">
+                <Setter Property="FontSize" Value="16" />
+                <Setter Property="TextColor" Value="{DynamicResource Gray-900}" />
+                <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="HorizontalTextAlignment" Value="Center" />
+                <Setter Property="FontFamily" Value="Montserrat-SemiBold" />
+            </Style>
+
+
             <!--  Common style for Description labels  -->
             <Style x:Key="DescriptionLabelStyle" TargetType="Label">
                 <Setter Property="FontSize" Value="14" />
