--- a/EcoCareApp/EcoCareApp/App.xaml
+++ b/EcoCareApp/EcoCareApp/App.xaml
@@ -44,7 +44,7 @@
                 <Setter Property="LineHeight" Value="{OnPlatform Android=1.5, Default=-1}" />
             </Style>
 
-            <Style x:Key="TitleEntrylStyle" TargetType="Entry">
+            <Style x:Key="TitleEntryStyle" TargetType="Entry">
                 <Setter Property="FontSize" Value="16" />
                 <Setter Property="TextColor" Value="{DynamicResource Gray-900}" />
                 <Setter Property="HorizontalOptions" Value="Center" />
